# pure-nes

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  azure-pipelines.yml  llc  opt  pure-nes.cabal  run.sh  stack.yaml  windows_build.bat
.github/workflows/: main.yml
app/: Communication.hs  Framerate.hs  GUI.hs  JoyControls.hs  Main.hs  SDLWindow.hs  SDL_Audio.hs  SDL_Window.hs  Timing.hs
app/Emulator/: Audio.hs  JoyControls.hs  Window.hs
app/GUI/: InGame.hs  Logic.hs  State.hs  Window.hs
bench/: Main.hs
bench/benchROMs/: benchmarks  delay10s.nes  delay20s.nes  factorial.nes
bench/results/: report.html  report_03_06_22_34_36_"AMD Ryzen 7 2700 Eight-Core Processor".html  report_03_06_22_36_"AMD Ryzen 7 2700 Eight-Core Processor".html  report_2020-03-06 21:55:27.487234737 UTC.html  report_2020-03-06 22:00:40.544953174 UTC.html
documentation/: NESemulation.pptx  elteikthesis.cls  thesis.tex
documentation/chapters/: impl.tex  intro.tex  sum.tex  user.tex
mobile/: Minimal.hs
resources/Emulator/: saveFolder.txt
resources/GUI/: logo2.xcf
src/: Communication.hs
src/Emulator/: AppResources.hs  Audio.hs  CrtShader.hs  Framerate.hs  JoyControls.hs  Logic.hs  Window.hs
src/Nes/: APU.hs  CPU6502.hs  CPUEmulator.hs  Cartridge.hs  Controls.hs  EmulatorMonad.hs  MasterClock.hs  Oscillator.hs  PPU.hs  PPUEmulator.hs  Serialization.hs  Timing.hs  Word.hs
src/Nes/APU/: Emulation.hs  Memory.hs  Oscillator.hs
src/Nes/CPU/: Disassembler.hs  Emulation.hs  InterruptAccess.hs  InterruptRegisters.hs  Memory.hs  Serialization.hs
src/Nes/Cartridge/: Mappers.hs  Memory.hs  Parser.hs  Serialization.hs
src/Nes/Cartridge/INES/: Parser.hs
src/Nes/Emulation/: MasterClock.hs  Monad.hs  Registers.hs
src/Nes/PPU/: Emulation.hs  Memory.hs  Serialization.hs
test/: Spec.hs
test/APU/: Spec.hs
test/CPU/Exhaustive/: Spec.hs
test/CPU/Instr_test_v5/: Spec.hs
test/CPU/Nestest/: LogParser.hs  Spec.hs
test/CPU/Quick/Nestest/: LogParser.hs  Spec.hs
test/PPU/: Spec.hs
test/PPU/Exhaustive/: Spec.hs
