cabal-version: 1.12

name:           pure-nes
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/sutajo/pure-nes#readme>
homepage:       https://github.com/sutajo/pure-nes
bug-reports:    https://github.com/sutajo/pure-nes/issues
author:         Suhajda Tamás
maintainer:     sutajo@gmail.com
copyright:      2020 Suhajda Tamás
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/sutajo/pure-nes

library
  exposed-modules:
      Nes.APU.Emulation
      Nes.APU.Memory
      Nes.APU.Oscillator
      Nes.CPU.Emulation
      Nes.CPU.Memory
      Nes.CPU.Serialization
      Nes.Emulation.MasterClock
      Nes.Emulation.Monad
      Nes.PPU.Emulation
      Nes.PPU.Memory
      Nes.PPU.Serialization
      Nes.Cartridge.Parser
      Nes.Cartridge.Serialization
      Nes.Cartridge.Memory
      Nes.Cartridge.Mappers
      Nes.Serialization
      Nes.Controls
  other-modules:
      Paths_pure_nes
  hs-source-dirs:
      src
  ghc-options:       
      -fno-warn-name-shadowing
      -fwarn-unused-imports
      -O2
      -funbox-strict-fields
      -foptimal-applicative-do
      -fexpose-all-unfoldings
      -flate-specialise
      -fcross-module-specialise
      -fspecialise-aggressively
      -fstatic-argument-transformation
      -fstg-cse
      -fexcess-precision
      --funfolding-keeness-factor=3
  build-depends:
       base >=4.7 && <5
     , lens
     , monad-loops
     , time
     , mtl
     , unboxed-ref
     , primitive
     , binary
     , bytestring
     , containers
     , vector
     , attoparsec
     , template-haskell
     , extra
     , Chart
     , Chart-diagrams
     , filepath
     , colour
     , mutable-containers
     , cereal
     , cereal-vector
  default-extensions: 
       ApplicativeDo
     , RecordWildCards
     , BinaryLiterals
     , ScopedTypeVariables
     , DeriveGeneric
     , UnboxedSums
     , LambdaCase
  default-language: Haskell2010

executable pure-nes
  main-is: GUI.hs
  other-modules:
      Paths_pure_nes
      Emulator.Audio
      Emulator.Window
      JoyControls
      Communication
      Framerate
  hs-source-dirs:
      app
  ghc-options: 
      -Wno-unsupported-llvm-version
      -fwarn-unused-imports
      -threaded
      -rtsopts
      "-with-rtsopts=-xn -N"
      -funbox-strict-fields
      -O2
      -fexcess-precision
  build-depends:
      base >=4.7 && <5
    , pure-nes
    , gi-gtk
    , gi-gdk
    , gi-gtk-declarative
    , gi-gtk-declarative-app-simple
    , haskell-gi-base
    , gi-gobject
    , text
    , vector
    , sdl2
    , monad-loops
    , stm
    , mtl
    , transformers
    , containers
    , concurrent-extra
    , pipes
    , time
    , StateVar
    , filepath
    , template-haskell
    , raw-strings-qq
    , bytestring
    , directory
    , mutable-containers
    , extra
    , cereal
  default-extensions: 
    RecordWildCards, 
    LambdaCase, 
    ScopedTypeVariables
  default-language: Haskell2010

test-suite pure-nes-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pure_nes
      CPU.Quick.Nestest.Spec
      CPU.Quick.Nestest.LogParser
      CPU.Exhaustive.Spec
      PPU.Spec
      APU.Spec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pure-nes
    , tasty
    , tasty-hunit
    , attoparsec
    , bytestring
    , monad-loops
  default-extensions: RecordWildCards
  default-language: Haskell2010

benchmark framerate-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:
      base >=4.7 && <5    
    , pure-nes
    , criterion
    , deepseq
    , vector
    , monad-loops
    , time
    , cpuinfo
  ghc-options:     
    -Wno-unsupported-llvm-version
    -fwarn-unused-imports
    -O2
    -fllvm
  default-language: Haskell2010
