cabal-version: 1.12

name:           pure-nes
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/sutajo/pure-nes#readme>
homepage:       https://github.com/sutajo/pure-nes
bug-reports:    https://github.com/sutajo/pure-nes/issues
author:         Suhajda Tamás
maintainer:     sutajo@gmail.com
copyright:      2020 Suhajda Tamás
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/sutajo/pure-nes

library
  exposed-modules:
      Nes.Emulation.Monad
      Nes.Emulation.MasterClock
      Nes.CPU.Memory
      Nes.CPU.Serialization
      Nes.CPU.Emulation
      Nes.PPU.Emulation
      Nes.Cartridge.INES.Parser
      Emulator.Window
      Communication
  other-modules:
      Nes.CPU.InterruptAccess
      Nes.Emulation.Registers
      Nes.Cartridge.Memory
      Nes.Cartridge.Mappers
      Nes.Cartridge.Serialization
      Nes.APU.Memory
      Nes.APU.Oscillator
      Nes.APU.Emulation
      Nes.PPU.Memory
      Nes.PPU.Serialization
      Nes.Serialization
      Nes.Controls
      Emulator.Audio
      Emulator.Framerate
      Emulator.JoyControls
      Emulator.CrtShader
      Paths_pure_nes
  hs-source-dirs:
      src
  ghc-options:
      -Wunused-binds
      -fno-warn-name-shadowing
      -fwarn-unused-imports
      -O2
      -funbox-strict-fields
      -foptimal-applicative-do
      -fexpose-all-unfoldings
      -flate-specialise
      -flate-dmd-anal
      -fcross-module-specialise
      -fspecialise-aggressively
      -fstatic-argument-transformation
      -fomit-yields
      -fpedantic-bottoms
      -fstg-cse
      -fexcess-precision
      --funfolding-keeness-factor=3
  build-depends:
       base >=4.7 && <5
     , monad-loops
     , time
     , mtl
     , unboxed-ref
     , primitive
     , binary
     , bytestring
     , containers
     , vector
     , template-haskell
     , extra
     , Chart
     , Chart-diagrams
     , colour
     , attoparsec
     , filepath
     , mutable-containers
     , cereal
     , cereal-vector
     , sdl2
     , stm
     , transformers
     , text
     , directory
     , raw-strings-qq
     , lens
     , OpenGL
     , StateVar
     , ansi-terminal
  default-extensions: 
       ApplicativeDo
     , RecordWildCards
     , BinaryLiterals
     , ScopedTypeVariables
     , DeriveGeneric
     , UnboxedSums
     , LambdaCase
     , NamedFieldPuns
  default-language: Haskell2010

executable pure-nes
  main-is: GUI/Logic.hs
  other-modules:
      Paths_pure_nes
      GUI.Window
      GUI.InGame
      GUI.State
  hs-source-dirs:
      app
  ghc-options: 
      -Wno-unsupported-llvm-version
      -fwarn-unused-imports
      -threaded
      -rtsopts
      "-with-rtsopts=-xn -N"
      -funbox-strict-fields
      -O2
      -fexcess-precision
  build-depends:
      base >=4.7 && <5
    , pure-nes
    , gi-gtk
    , gi-gtk-declarative
    , gi-gtk-declarative-app-simple
    , text
    , vector
    , stm
    , pipes
    , time
    , filepath
    , template-haskell
    , raw-strings-qq
    , gi-gobject
    , unordered-containers
  default-extensions: 
    RecordWildCards, 
    LambdaCase, 
    ScopedTypeVariables,
    NamedFieldPuns
  default-language: Haskell2010

executable pure-nes-mobile
  main-is: Minimal.hs
  hs-source-dirs:
      mobile
  ghc-options:
      -fwarn-unused-imports
      -threaded
      -rtsopts
      "-with-rtsopts=-xn -N"
      -O2
  build-depends:
      base >=4.7 && <5
    , pure-nes
    , stm
  default-language: Haskell2010

test-suite pure-nes-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pure_nes
      CPU.Quick.Nestest.Spec
      CPU.Quick.Nestest.LogParser
      CPU.Exhaustive.Spec
      PPU.Spec
      APU.Spec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pure-nes
    , tasty
    , tasty-hunit
    , attoparsec
    , bytestring
    , monad-loops
  default-extensions: RecordWildCards
  default-language: Haskell2010

benchmark framerate-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:
      base >=4.7 && <5    
    , pure-nes
    , criterion
    , deepseq
    , vector
    , monad-loops
    , time
    , cpuinfo
  ghc-options:     
    -Wno-unsupported-llvm-version
    -fwarn-unused-imports
    -O2
    -fllvm
  default-language: Haskell2010
